// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots with all props 1`] = `
Array [
  <ForwardRef(render)
    styles={[Function]}
  />,
  .emotion-2 {
  color: green;
}

.emotion-0 {
  border: 2px solid #9B1518;
  border-radius: 5px;
  background: transparent;
  padding: 4px 16px;
  color: #9B1518;
  font-size: 1.2em;
  height: 44px;
  min-width: 140px;
  color: green;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  border: 2px solid #FFA8AA;
  color: #FFA8AA;
}

<Btn
    className="emotion-2"
    onClick={[Function]}
    type="submit"
  >
    <button
      className="emotion-0 emotion-1"
      onClick={[Function]}
      type="submit"
    >
      Hello!
    </button>
  </Btn>,
]
`;

exports[`Button snapshots with required props 1`] = `
Array [
  <ForwardRef(render)
    styles={[Function]}
  />,
  .emotion-0 {
  border: 2px solid #9B1518;
  border-radius: 5px;
  background: transparent;
  padding: 4px 16px;
  color: #9B1518;
  font-size: 1.2em;
  height: 44px;
  min-width: 140px;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-0:disabled {
  border: 2px solid #FFA8AA;
  color: #FFA8AA;
}

<Btn
    className="emotion-2"
    onClick={[Function]}
    type="button"
  >
    <button
      className="emotion-0 emotion-1"
      onClick={[Function]}
      type="button"
    >
      Hello!
    </button>
  </Btn>,
]
`;
